# vistor-ai

./: .env.example  .gitignore  PROGRESS.md  PROGRESS_MOBILE.md  README.md  docker-compose.yml
.gemini/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users.py  0002_create_inspections.py  0003_create_media.py  0004_create_reports.py  0005_create_audit_log.py  20260604_3a009ec2d0ee_add_title_to_inspections.py  20260609_add_fcm_token_to_users.py  20260614_2f8e78c02adc_add_user_avatar_key.py
backend/app/: config.py  main.py
backend/app/dependencies/: auth.py  db.py
backend/app/models/: __init__.py  audit_log.py  inspection.py  media.py  report.py  user.py
backend/app/routers/: audit.py  auth.py  geo.py  inspections.py  media.py  reports.py  settings.py  users.py
backend/app/schemas/: audit_log.py  auth.py  inspection.py  media.py  report.py  settings.py  user.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  geo_service.py  inspection_service.py  pdf_service.py  storage_service.py  token_service.py
backend/app/templates/: report.html
backend/app/tests/: conftest.py  test_audit.py  test_auth.py  test_coverage_boost.py  test_e2e.py  test_inspections.py  test_users.py
docs/backend/: GEMINI.md
docs/mobile/: GEMINI.md  LAYOUT.md  ROUTER.md  STATES.md  THEME.md
mobile/: .env.example  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  pubspec.yaml
mobile/lib/: main.dart
(+96 files in other folders)
