[project]
name = "vistor-ai-backend"
version = "0.1.0"
description = "Vistor AI Backend - Inspeção técnica com IA"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Vistor AI Team" }
]
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.14.3",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiobotocore>=2.11.0",
    "httpx>=0.27.0",
    "weasyprint>=61.1",
    "jinja2>=3.1.3",
    "redis[hiredis]>=5.0.1",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.4",
    "python-magic>=0.4.27",
    "onnxruntime>=1.17.1",
    "pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = []
